--- a/tensors.ipynb
+++ b/tensors.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/isaigordeev/pytorch-implementation/blob/main/tensors.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -332,22 +342,23 @@
     {
       "cell_type": "code",
       "source": [
-        "!nvidia-smi"
+        "!nvidia-smi\n",
+        "import torch "
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_jVj6D-_dzEf",
-        "outputId": "f34245db-7d2e-46f0-cf4b-ecd4b52618e8"
+        "outputId": "dd1fe30c-e435-4e4b-d732-96e105bbb647"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Sat Feb 18 12:20:53 2023       \n",
+            "Sun Feb 19 14:29:45 2023       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 510.47.03    Driver Version: 510.47.03    CUDA Version: 11.6     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -356,7 +367,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   72C    P0    29W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
+            "| N/A   59C    P0    26W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -373,9 +384,146 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "torch.cuda.is_available()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tKjmFhRkd82S",
+        "outputId": "3b1023a4-581a-4dea-88de-bfa472207c65"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "device = 'cuda'\n",
+        "torch.manual_seed(1234)\n",
+        "rand_tensor1 = torch.rand(2,2, device = device)\n",
+        "torch.manual_seed(1234)\n",
+        "rand_tensor2 = torch.rand(2,2, device = device)\n",
+        "print(rand_tensor1, rand_tensor2)"
+      ],
+      "metadata": {
+        "id": "dNdWQHWPehUY",
+        "outputId": "249f059b-b6a8-4666-fc7e-ccfe1f4a1fcd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0.1272, 0.8167],\n",
+            "        [0.5440, 0.6601]], device='cuda:0') tensor([[0.1272, 0.8167],\n",
+            "        [0.5440, 0.6601]], device='cuda:0')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%time\n",
+        "rand_tensor3 = torch.mm(rand_tensor1, rand_tensor2)\n",
+        "print(rand_tensor3)"
+      ],
+      "metadata": {
+        "id": "CfO7Koz-expe",
+        "outputId": "09ba7513-7d41-42cc-d8d4-5aafcbf5e1ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 3 µs, sys: 1 µs, total: 4 µs\n",
+            "Wall time: 8.58 µs\n",
+            "tensor([[0.7137, 0.1662],\n",
+            "        [0.7719, 0.2922]], device='cuda:0')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(torch.max(rand_tensor3))"
+      ],
+      "metadata": {
+        "id": "X9eoqjlIfsqa",
+        "outputId": "85276960-bd5d-4413-c1fb-305d472a2186",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(0.7719, device='cuda:0')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor = torch.rand(1,1,10)\n",
+        "tensor\n",
+        "tensor = tensor.squeeze()\n",
+        "tensor"
+      ],
+      "metadata": {
+        "id": "xBBXoOFCjR0C",
+        "outputId": "6faac41b-df18-4cd1-eabf-3e3587bb7c7b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0.7917, 0.5447, 0.6220, 0.1668, 0.3932, 0.8298, 0.7293, 0.3554, 0.5615,\n",
+              "        0.8828])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "tKjmFhRkd82S"
+        "id": "QRS0faXlGQCo"
       },
       "execution_count": null,
       "outputs": []
@@ -406,7 +554,8 @@
       }
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "accelerator": "GPU",
     "gpuClass": "standard"
