--- a/tensors.ipynb
+++ b/tensors.ipynb
@@ -9,14 +9,13 @@
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "'1.13.1'"
-            ]
-          },
-          "execution_count": 6,
-          "metadata": {},
-          "output_type": "execute_result"
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe kernel failed to start due to the missing module 'prompt_toolkit.formatted_text'. Consider installing this module.\n",
+            "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresMissingModule'>here</a> for more info."
+          ]
         }
       ],
       "source": [
@@ -322,18 +321,16 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "(went to colab from local jupyter)"
-      ],
       "metadata": {
         "id": "Dxz2jByudxLB"
-      }
+      },
+      "source": [
+        "(went to colab from local jupyter)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!nvidia-smi"
-      ],
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -341,11 +338,10 @@
         "id": "_jVj6D-_dzEf",
         "outputId": "f34245db-7d2e-46f0-cf4b-ecd4b52618e8"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Sat Feb 18 12:20:53 2023       \n",
             "+-----------------------------------------------------------------------------+\n",
@@ -369,19 +365,27 @@
             "+-----------------------------------------------------------------------------+\n"
           ]
         }
+      ],
+      "source": [
+        "!nvidia-smi"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "tKjmFhRkd82S"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "provenance": []
+    },
+    "gpuClass": "standard",
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -404,12 +408,7 @@
       "interpreter": {
         "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
       }
-    },
-    "colab": {
-      "provenance": []
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
